syntax="proto3";
package services;
option go_package ="./;pb";

message EmployeeModel{
  // @gotags: json:"name" form:"name"
  string name=1;
  // @gotags: json:"tel" form:"tel"
  string tel=2;
  // @gotags: json:"salary" form:"salary"
  double salary=3;
  // @gotags: json:"note" form:"note"
  string note=4;
  // @gotags: json:"level" form:"level"
  int32 level=5;
}

message EmployeeSignupSuccessModel{
  // @gotags: json:"id" form:"id"
  int32 id = 1;
  // @gotags: json:"account" form:"account"
  string account = 2;
  // @gotags: json:"password" form:"password"
  string password = 3;
  // @gotags: json:"name" form:"name"
  string name = 4;
  // @gotags: json:"tel" form:"tel"
  string tel = 5;
  // @gotags: json:"salary" form:"salary"
  double salary = 6;
  // @gotags: json:"note" form:"note"
  string note = 7;
  // @gotags: json:"level" form:"level"
  int32 level = 8;
}
message EmployeeSignupFailModel{
  // @gotags: json:"id" form:"id"
  int32 id = 1;
  // @gotags: json:"name" form:"name"
  string name = 2;
  // @gotags: json:"tel" form:"tel"
  string tel = 3;
  // @gotags: json:"salary" form:"salary"
  double salary = 4;
  // @gotags: json:"note" form:"note"
  string note = 5;
  // @gotags: json:"level" form:"level"
  int32 level = 6;
  // @gotags: json:"wrong_message" form:"wrong_message"
  string wrong_message = 7;
}

message EmployeeUpdateRequest{
  string name = 1;
  // @gotags: json:"tel" form:"tel"
  string tel = 2;
  // @gotags: json:"salary" form:"salary"
  double salary = 3;
  // @gotags: json:"note" form:"note"
  string note = 4;
  // @gotags: json:"level" form:"level"
  int32 level = 5;
  // @gotags: json:"password" form:"password"
  string password = 6;
  // @gotags: json:"account" form:"account"
  string account = 7;
  // @gotags: json:"new_password" form:"new_password"
  string new_password = 8;
}

message EmployeeUpdateResponse{
  // @gotags: json:"success" form:"success"
  bool success = 1;
  // @gotags: json:"code" form:"code"
  uint32 code = 2;
}

message EmployeeDeleteRequest{
  // @gotags: json:"password" form:"password"
  string password = 1;
  // @gotags: json:"account" form:"account"
  string account = 2;
}
message EmployeeDeleteResponse{
  // @gotags: json:"success" form:"success"
  bool success = 1;
  // @gotags: json:"code" form:"code"
  uint32 code = 2;
}


message EmployeeSignupRequest{
  // @gotags: name:"employee_list" json:"employee_list" form:"employee_list" uri:"employee_list"
  repeated EmployeeModel employee_list=1;
  // @gotags: name:"token" json:"token" form:"token" uri:"token"
  string token=2;
}

message EmployeeSignupResponse{
  // @gotags: name:"success_list" json:"success_list" form:"success_list" uri:"success_list"
  repeated EmployeeSignupSuccessModel success_list=1;
  // @gotags: name:"fail_list" json:"fail_list" form:"fail_list" uri:"fail_list"
  repeated EmployeeSignupFailModel fail_list=2;
  // @gotags: name:"code" json:"code" form:"code" uri:"code"
  uint32 code=3;
}
message EmployeeLoginRequest{
  // @gotags: name:"account" json:"account" form:"account" uri:"account"
  string account = 1;
  // @gotags: name:"password" json:"password" form:"password" uri:"password"
  string password = 2;
}
message EmployeeLoginResponse{
  // @gotags: name:"id" json:"id" form:"id" uri:"id"
  int32 id = 1;
  // @gotags: name:"token" json:"token" form:"token" uri:"token"
  string token = 2;
  // @gotags: name:"code" json:"code" form:"code" uri:"code"
  uint32 code = 3;
}



service EmployeeService{
    rpc EmployeeSignup(EmployeeSignupRequest) returns(EmployeeSignupResponse);
    rpc EmployeeLogin(EmployeeLoginRequest) returns (EmployeeLoginResponse);
    rpc EmployeeUpdate(EmployeeUpdateRequest) returns(EmployeeUpdateResponse);
    rpc EmployeeDelete(EmployeeDeleteRequest) returns(EmployeeDeleteResponse);
}